samples/_failures_safe/1761719173_30123b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3eac14ef.c: In function ‘main’:
./samples/SAFE/__tmp_3eac14ef.c:136:5: error: expected expression at end of input
  136 |     while (entry_count < MAX_ENTRIES && fgets(line, sizeof(line),
      |     ^~~~~
./samples/SAFE/__tmp_3eac14ef.c:136:5: error: expected declaration or statement at end of input
